tela cadastro logando

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".views.search_problems" />
         <activity android:name=".views.Ac_Denunciar" />
         <activity android:name=".views.Ac_Lista_Denuncias" />
+        <activity android:name=".views.CadastroActivity"></activity>
     </application>
 
 </manifest>
