--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,30 +9,39 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- Needed only if your app targets Android 5.0 (API level 21) or higher. -->
     <uses-feature android:name="android.hardware.location.gps" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!--
     <uses-feature android:name="android.hardware.camera2" />
     <uses-feature android:name="android.hardware.camera2.autofocus" />
 
-    To auto-complete the email text field in the login form with the user's emails -->
+    To auto-complete the email text field in the login form with the user's emails
+    -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name="com.orm.SugarApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.orm.SugarApp">
-
-        <meta-data android:name="DATABASE" android:value="vigilantes.db" />
-        <meta-data android:name="VERSION" android:value="1" />
-        <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="br.com.odnumiar.vigilantesdacidade.orm" />
+        android:theme="@style/AppTheme">
+        <meta-data
+            android:name="DATABASE"
+            android:value="vigilantes.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="1" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="br.com.odnumiar.vigilantesdacidade.orm" />
 
         <activity
             android:name=".MainActivity"
@@ -49,11 +58,20 @@
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".views.search_problems" />
-        <activity android:name=".views.Ac_Denunciar"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation"/>
+        <activity
+            android:name=".views.Ac_Denunciar"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
         <activity android:name=".views.Ac_Lista_Denuncias" />
-        <activity android:name=".views.Ac_Cadastro"></activity>
+        <activity android:name=".views.Ac_Cadastro" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDzUOk0cWa79AZCSDVUqTon-DOeuV28lr8" />
+
+        <activity
+            android:name=".views.Ac_MapsActivity"
+            android:label="@string/title_activity_ac__maps"></activity>
     </application>
 
 </manifest>
